--- a/assets/css/index_styles.css
+++ b/assets/css/index_styles.css
@@ -40,13 +40,12 @@ h2 {
     padding-left: 20px;
     padding-bottom: 20px;
     background-color: white;
-    width: 50%;
-    height: 50%;
+    width: 600px;
+    height: 330px;
     }
 
 .Big_Box{
     float: left;
-    background-color: lightgray;
     width: 100%;
     height: 100%;
 }
@@ -60,12 +59,11 @@ footer {
     bottom: 0;
     left:0;
     width: 100%;
-    float: left;
     border-top: 10px solid #4aaaa5;
 }
 
 body{
-    background-color: lightgray;
+    background-image: url("../images/memphis-mini.png");
 }
 
 p{
@@ -73,13 +71,19 @@ p{
 }
 
 img{
-    float: center;
+    float: left;
 }
 
 p{
-    float: center;
+    float: left;
 }
 
-.Copyright{
+#copyRight{
     color: lightgray;
+    text-align: center;
+    width: 100%;
+}
+
+#firstp{
+    float: left;
 }
