--- a/assets/css/index_styles.css
+++ b/assets/css/index_styles.css
@@ -12,6 +12,7 @@
     margin-left: 270px;
     text-align:center;  
     float: left;
+    font-family: Georgia, Times, 'Times New Roman', serif;
 }
 
 .tablinks{
@@ -20,6 +21,7 @@
     border-bottom: none;
     border-top: none;
     background: none;
+    color: gray;
 
 
 }
@@ -31,6 +33,7 @@
     border-bottom:none;
     border-top: none;
     background: none;
+    color: gray;
 }
 
 .About_Me
@@ -47,6 +50,7 @@
 
 h2 {
     color: #4aaaa5;
+    font-family: Georgia, Times, 'Times New Roman', serif;
 }
 
 .first_page{
@@ -73,7 +77,7 @@ h2 {
 footer {
     text-align: center;
     background-color: gray;
-    position: absolute;
+    position: fixed;
     right: 0;
     bottom: 0;
     left:0;
@@ -83,6 +87,9 @@ footer {
 
 body{
     background-image: url("../images/memphis-mini.png");
+    font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: gray;
+    font-weight: 200px
 }
 
 p{
@@ -91,6 +98,7 @@ p{
 
 img{
     float: left;
+    padding-right: 30px 
 }
 
 p{
